# cowsay

./: .gitignore  manage.py  pyproject.toml
cowapp/: asgi.py  settings.py  urls.py  wsgi.py
myapp/: forms.py  models.py  urls.py  views.py
myapp/migrations/: 0001_initial.py
myapp/templates/: index.html  stock.html
