[tool.poetry]
name = "cowsay"
version = "0.1.0"
description = "Cowsay what?"
authors = ["Sasha Lukas <sashamati@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.6"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.2"
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
